--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html>
 <head>
     <title>HTML Page</title>
+    <style>
+        h1 {
+            color: navy;
+            font-family: 'Times New Roman', Times, serif;
+            font-style: bold;
+            font-size: 30px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    Isha Patel
+    <h1> Isha Patel </h1>
+    
 </body>
 </html>
